--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "Legacy Verified Extension",
   "version": "0.1.0",
-  "description": "My Chrome Extension",
+  "description": "Legacy Verified is a browser extension that enables you to view who previously was verified on Twitter",
   "icons": {
     "16": "icons/icon_16.png",
     "32": "icons/icon_32.png",
@@ -17,7 +17,8 @@
     "default_popup": "popup.html"
   },
   "permissions": [
-    "storage"
+    "storage",
+    "tabs"
   ],
   "web_accessible_resources": [{
     "resources": ["/icons/*.png", "legacy-verified.csv"],
@@ -30,11 +31,8 @@
       ],
       "run_at": "document_idle",
       "js": [
-        "contentScript.js"
+        "content.js"
       ]
     }
-  ],
-  "permissions": [
-    "tabs"
   ]
 }
