--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,9 +9,6 @@
     "48": "icons/icon_48.png",
     "128": "icons/icon_128.png"
   },
-  "background": {
-    "service_worker": "background.js"
-  },
   "action": {
     "default_title": "Legacy Verified Extension",
     "default_popup": "popup.html"
@@ -42,5 +39,10 @@
         "content.js"
       ]
     }
-  ]
+  ],
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "legacy-verified@robertspier.nl"
+    }
+  }
 }
